--- a/Antrikotik/appsettings.Development.json
+++ b/Antrikotik/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=eivv77;Password=nur4673;Database=postgres;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
