--- a/Antrikotik/appsettings.Development.json
+++ b/Antrikotik/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;User Id=eivv77;Password=nur4673;Database=postgres;"
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=eivv77;Password=nur4673;Database=postgres1;"
   },
 
   "Logging": {
